--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,118 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  margin: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  color: rgb(34, 34, 34);
+}
+
+a {
+  text-decoration: none;
+}
+
+h1 {
+  color: rgb(6, 54, 95);
+  font-size: 27px;
+  margin: 0 32% 20px 0;
+  line-height: 32px;
+}
+
+p {
+  line-height: 24px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+#blue-background {
+  background: linear-gradient( rgb(81, 127, 164), #06365f);
+  position: absolute;
+  height: 280px;
+  width: 100%;
+}
+
+#container {
+  width: 60%;
+  margin: 0 auto;
+  padding-top: 80px;
+}
+
+#iphones {
+  position: absolute;
+  margin-left: 4%;
+}
+
+.btn-link {
+  background: rgb(111, 151, 182);
+  border: 1px solid rgb(28, 83, 128);
+  color: white;
+  padding: 6px 10px 6px 6px;
+  box-shadow: rgba(0, 0, 0, 0.1);
+  text-shadow: 0 1px 1px #1c5380;
+  font-weight: bold;
+  width: 80px;
+  height: 25px;
+  text-align: center;
+  float: right;
+  margin: 2% 5% 0 0;
+}
+
+.btn-link img {
+  padding-right: 4px;
+  float: left;
+}
+
+#content {
+  float: right;
+  position: relative;
+  width: 520px;
+  margin-top: 30px;
+}
+
+#content-tab {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  padding: 40px 56px 128px 48px;
+}
+
+#content-tab img {
+  margin-top: 5%;
+  padding-right: 2%;
+}
+
+.clearfix {
+  clear: both;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding-bottom: 5%;
+}
+
+ul {
+  display: block;
+  text-align: center;
+}
+
+ul li {
+  list-style: none;
+  font-weight: bold;
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 12px;
+  margin: 0 0.5%;
+}
+
+footer a {
+  color: rgb(63, 114, 155);
+}
+
+li span {
+  color: rgba(0, 0, 0, 0.3);
 }
