--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,106 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+header {
+  background-image: url("../images/bgtile.png");
+  height: 350px;
+  width: 100%;
+}
+
+.general-container {
+  margin: 0 auto;
+  width: 60%;
+}
+
+.phones-container {
+  float: left;
+  position: absolute;
+  top: 18%;
+}
+
+.logo-container {
+  float: left;
+  position: absolute;
+  margin-left: 30%;
+  top: 20%;
+}
+
+.button-container {
+  float: right;
+  position: absolute;
+  top: 23%;
+  margin-left: 60%;
+}
+
+button {
+  background-color: #668EA8;
+  box-shadow: 1px 2px 8px #336087;
+  border: 1px solid rgb(32, 89, 133);
+  border-radius: 3px;
+  color: white;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: center;
+  height: 40px;
+  font-family: 'Times New Roman', Times, serif;
+}
+
+.logo-home {
+  vertical-align: middle; 
+}
+
+.frame {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  float: right;
+  position: absolute;
+  top: 30%;
+  margin-left: 50%;
+  padding: 1% 3%;
+}
+
+h2 {
+  width: 55%;
+  color: #06365f;
+}
+
+p {
+  width: 50%;
+  min-width: 430px;
+}
+
+ul {
+  text-align: center;
+}
+
+ul li{
+  list-style-type:none;
+  font-weight: bold;
+  font-size: 12px;
+  display: inline-block;
+  text-transform: uppercase;
+  margin: 0 1%;
+}
+
+.copyright {
+  color: rgb(140, 143, 145);
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  padding-bottom: 5%;
+}
+
+a:link {
+  text-decoration: none;
+  color: #1c5380;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #1c5380;
+}
