--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,92 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+.section1{
+  background-color: #1c5380;
+  height: 400px; 
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #eee;
+}
+
+.img1{
+  position: absolute;
+  top: 100px;
+  left: 200px;
+}
+
+
+.img2{
+  position: absolute;
+  top: 100px;
+  right: 320px;
+}
+
+button{
+  background:   linear-gradient(70deg, #9ac4e7, #1c5380);
+  width: 110px;  
+  height: 50px;
+  background-color: #1c5380;
+  color: white;
+  position: absolute;
+  top: 125px;
+  right: 180px;
+}
+button .txtlog{  
+  padding: auto 0;
+}
+p{
+  font-size:1.3rem;
+}
+.txt{  
+  background-color: white;
+  position: relative;
+  bottom: 250px;
+  border: 2px solid #eee;
+  border-radius: 20px;
+  box-sizing: border-box;
+  box-shadow: 2px 2px 10px 0 #eee;
+  margin: 50px 5% 0;
+  padding: 20px;
+  margin-left: 50%; 
+  width: 40%; 
+  font-size: 1.7em;
+  text-align: left;
+}
+
+h3{
+  padding-right: 20px;
+  color: #06365f;
+  text-align: left;
+}
+
+footer{
+  position: relative;
+  bottom: 210px;
+  left: 80px;
+  /* top:100px */
+}
+ul {
+  margin-top: 100px;
+  margin-left: 70px;
+  /* width: 1200px; */
+}
+
+li{
+  font-size: 0.8rem;
+    font-weight: bold;
+    color: #06365f;
+    float: left;
+    list-style-type: none;
+    text-align: left;
+    text-transform:uppercase;
+    width: 7%;
+}
+.clearfix {
+  clear: both;
+}
+.gris{
+color: gray;
 }
