--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -3,8 +3,107 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+  .head-bg {
+    width: 100%;
+    height: 330px;
+    background-image: linear-gradient(to top, #06365f, #1c5380);
+  }
+
+
+  .logo img {
+    position: absolute;
+    top: 150px;
+    left: 50%;
+    width: 20%;
+  
+  }
+
+  .container {
+    display: flex;
+  }
+
+  .home-btn {
+    background-image: linear-gradient(to top , #1c5380, #ffffff);
+    display: inline-block;
+    position: absolute;
+    padding: 10px;
+    border-radius: 7px;
+    border: 1px solid #06365f;
+    top: 154px;
+    left: 75%;
+    align-items: center;
+    display: flex;
+  }
+
+  .home-btn span {
+    display: inline-block;
+    color: #ffffff;
+    font-weight: 700;
+    align-items: center;
+    margin-left: 10px;
+  
+  }
+
+  .phoneImg {
+    position: absolute;
+    top: 120px;
+    left: 16%;
+  }
+
+  .copy-wrapper {
+    position: absolute;
+    top: 250px;
+    left: 47%;
+    width: 40%;
+    margin-bottom: 40px;
+    padding: 20px 40px;
+    background-color: #ffffff;
+    border-radius: 7px;
+    box-shadow: 0px 4px 10px #999999;
+
+  }
+
+  .copy-wrapper h1 {
+    color: #06365f;
+    font-weight: 700;
+  }
+
+  .copy-wrapper img {
+    margin-top: 15px;
+    padding-right: 20px;
+    width: 33%;
+  }
+
+  .section-menu {
+    position: absolute;
+    top: 120%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+
+  .menu {
+    padding: 40px 0;
+  }
+
+  .menu span {
+    font-size: 14px;
+    color: #1c5380;
+    font-weight: 800;
+    padding-right: 10px;
+  }
+
+  #c-tag {
+    color: #999999;
+  }
+
+  
