--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -7,4 +7,105 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: #f5f6f8;
+}
+.clearfix{
+  clear:both;
+}
+
+span{
+  font-weight: 700;
+}
+#background{
+  background-color: #4c7397;
+  width:100%;
+  position: absolute;
+  height:320px;
+  top:0;
+  left:0;
+}
+.content-wrapper{
+  position: absolute;
+  width: 920px;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+}
+.phone-wrapper{
+  position: relative;
+  float:left;
+  margin-right: 30px;
+}
+.copy-wrapper{
+  position:relative;
+  width:60%;
+  float:left;
+}
+
+h1{
+display: inline-block;
+content:url(../images/brand.png);
+float:left;
+}
+h2{
+  font-size: 1.8em;
+  color:#38546e;
+}
+
+#log-in{
+  margin:auto auto;
+  background-color:#4c7397;
+  padding:10px;
+  float:right;
+  box-shadow: 0px 0px 8px rgba(28,42,55,0.4);
+}
+#log-in a{
+  text-decoration: none;
+  font-weight: 700;
+  color:#f5f6f8;
+}
+.home{
+  content:url(../images/home.png);
+  float:left;
+  margin-right: 8px;
+}
+
+.copy{
+  background-color: #f5f6f8;
+  border-radius: 4px;
+  padding:6px 20px;
+  box-shadow: 0px -4px 8px rgba(28,42,55,0.4);
+}
+.apple-store{
+  display: inline-block;
+content:url("../images/badge-iphone.png");
+float:left;
+}
+
+.google-play{
+  float:left;
+  margin-left:12px;
+  display: inline-block;
+  content:url("../images/badge-android.png");
+}
+
+.footer{
+  position: absolute;
+  bottom:0px;
+  width:60%;
+  margin:0 20%;
+  padding-bottom: 10px;
+}
+.footer a{
+  display: inline-block;
+  text-decoration: none;
+  color:#4c7397;
+  font-weight:700;
+  float:left;
+  margin:0 8px;
+}
+.footer span{
+  font-weight: 700;
+  float:left;
+  color:#90a9b7;
 }
