--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,71 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+ .header {
+   background-color: #06365f;
+   height: 350px;
+ }
+
+
+.phone {
+  position: absolute;
+  bottom: 50px;
+  left: 40px;
+}
+
+.brand {
+  position: absolute;
+  bottom: 400px;
+  left: 450px;
+}
+
+
+
+.text {
+  width: 350px;
+  margin: 0;
+  position: absolute;
+  left: 500px;
+  border: solid black 1px;
+  box-shadow: 5px 10px;
+  padding: 10px 120px 10px 20px;
+  border-radius: 15px;
+  margin: 15px;
+}
+
+#button {
+  display:inline-block;
+  position: absolute;
+  bottom: 424px;
+  left: 850px;
+  color: white;
+  margin: 0;
+  width: 100px;
+  border: solid #1c5380 2px;
+  border-radius: 15px;
+  padding: 0px 10px;
+  margin: 0;
+
+   }
+.home {
+ position:absolute;
+ bottom: 20px;
+
+}
+h3 {
+  float:right;
+}
+
+ footer {
+   position: absolute;
+   top: 95%;
+   left: 30%;
+ }
+
+a footer {
+  float:left;
+  width: 600px;
+
+}
+
+
