--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,153 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
+* {
   margin: 0;
+  padding: 0;
+  box-sizing: inherit;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+  color: #1d1d1d;
+  font-weight: 300;
+  line-height: 1.5;
+  font-size: 1.7rem;
+}
+
+.container {
+  background-image: linear-gradient(rgb(80, 119, 155) 40%, transparent 40%);
+
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+
+  grid-gap: 2.5rem;
+}
+
+.phone__container {
+  height: 45rem;
+
+  grid-column: 1/3;
+  grid-row: 2/-2;
+
+  display: flex;
+  justify-content: flex-end;
+}
+
+.phone__container--img {
+  background-image: url(../images/phones.png);
+  background-size: cover;
+  height: 45rem;
+  width: 28rem;
+
+  grid-column: 1/3;
+  grid-row: 2/-2;
+}
+
+.description__container {
+  width: 80%;
+
+  grid-column: 3/-1;
+  grid-row: 2/-2;
+
+  display: flex;
+  flex-wrap: wrap;
+
+  padding: 1rem 4rem 0;
+}
+
+.description__header {
+  display: flex;
+
+  height: min-content;
+  margin-bottom: 1rem;
+  color: white;
+}
+
+.description__header--title {
+  height: 8rem;
+  width: 31.5rem;
+  background-image: url(../images/brand.png);
+}
+
+.btn--login {
+  background-image: linear-gradient(
+    to top,
+    rgba(106, 143, 174, 1),
+    rgba(106, 143, 174, 0.8)
+  );
+  color: white;
+  border: none;
+
+  padding: 0.5rem 1rem;
+
+  align-self: flex-end;
+}
+
+.description__body {
+  background-color: white;
+  padding: 2rem 3rem;
+}
+
+.description__text{
+  margin-bottom: 2rem;
+}
+
+.description__cta {
+  grid-column: 3/-1;
+  width: 100%;
+
+  display: flex;
+}
+
+.cta div {
+  background-color: #1d1d1d;
+  color: white;
+
+  border-radius: 5px;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.8);
+}
+
+.description__cta--apple {
+  height: 5rem;
+  width: 16.3rem;
+  background-image: url(../images/badge-iphone.png);
+  margin-right: 2rem;
+}
+
+.description__cta--android {
+  height: 5rem;
+  width: 16.3rem;
+  background-size: cover;
+  background-image: url(../images/badge-android.png);
+}
+
+.footer {
+  grid-column: 1/-1;
+  grid-row: 6/7;
+
+  display: flex;
+  justify-content: center;
+
+  text-transform: uppercase;
+  color: grey;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.footer a {
+  color: rgb(80, 119, 155);
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.footer > * {
+  font-weight: 700;
+  padding: 0 1rem;
 }
