--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -4,7 +4,92 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+
 body {
+  background:linear-gradient(#1c5380,#06365f 30%,white 0);
+  background-repeat: no-repeat;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0px;
+}
+h1{
+  color: #06365f;
+}
+.container{
+  width: 1200px;
+  margin: 0px auto;
+  padding: 10% 0px;
+  background-color:rgba(255, 255, 255, 0);
+  position: relative;
+}
+
+.phones {
+  position: absolute;  
+  float:left;
+  padding-left: 15%;
+}
+.clear {
+  clear:both;
+}
+.content {
+  float: right;
+  padding-right: 15%;
+  width: 400px;
+  height: 600px;
+
+}
+
+.frame {
+  background-image: url(/starter-code/images/frame.png);
+  background-repeat: no-repeat;
+  background-size:auto;
+  padding-left: 20px;
+  padding-top: 20px;
+  position: relative;
+}
+.nav {
+  text-align: center;
+}
+a {
+  text-decoration: none;
+  color: #1c5380;
+}
+.info-box{
+  padding-bottom: 100px;
+}
+.row {
+  display:inline-block;
+  vertical-align:middle;
+}
+.bottom-left{
+  position: absolute;
+  bottom : 0px;
+  left: 0px;
+}
+.bottom-left2{
+  position: absolute;
+  bottom : 0px;
+  left: 200px;
+}
+.nav{
+  width: 75%;
+  margin:0 auto;
+}
+
+.insta{
+  width: 65%;
+  display:inline-block;
+  vertical-align:middle;
+}
+.login{
+  background:linear-gradient(#1c5380,#06365f);
+  position:absolute;
+  right: 15%;
+  margin-top: 2%;
+  vertical-align:middle;
+  border-radius: 5px;
+  border-color: none;
+  color: white;
+}
+.copyright{
+  display:inline;
 }
