--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -8,3 +8,91 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.links a {
+  text-transform: uppercase;
+  color: #1c5390;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 12px;
+  margin: 0 10px 0 10px;
+}
+
+.links p {
+  text-transform: uppercase;
+  font-size: 12px;
+  color: gray;
+}
+
+.links {
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.content {
+  background-image: url("../images/frame.png");
+  background-size: cover;
+  padding: 10px 45px;
+  width: 565px;
+}
+
+.content h2 {
+  color: #06365f;
+}
+
+.header-wrapper {
+  background-image: url("../images/bgtile.png");
+  background-size: cover;
+  height: 40vh;
+}
+
+button {
+  margin-top: 20px;
+  width: 100px;
+  padding: 10px;
+  color: #fff;
+  background-image: url("../images/bgtile.png");
+  border-radius: 3px;
+  font-weight: bold;
+  float: right;
+  font-size: 12px;
+  border: 1px solid #1c5380;
+  background: linear-gradient(rgba(255,255,255,0.2), rgba(6,54,95,0.2));
+}
+
+.center {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-80%, -50%);
+  width: 40%;
+}
+
+.left-side {
+  width: 30%;
+  display: inline-block;
+  position: relative;
+}
+
+.right-side {
+  width: 100%;
+  display: inline-block;
+  position: absolute;
+  left: 350px;
+  margin-top: 10px;
+}
+
+.download {
+  margin: 20px 10px 0 0;
+}
+
+.links p {
+  display: inline-block;
+}
+
+.button-image {
+  padding-right: 5px;
+  margin-bottom: -0.50em;
+}
