--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -1,10 +1,117 @@
 /*
 Colors to use:
 dark blue: #06365f
-light blue: #1c5380
+light blue: #1c5380;
 */
 
-body {
+html {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  height: 100%;
+}
+
+body{
+  margin: 0 auto;
+  padding: 50px;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-attachment: scroll;
+  background-position: top left;
+}
+
+header{
+  margin-left: 20%;
+  width: 0 auto;
+}
+
+.phones{
+  position: absolute;
+  margin-left: -300px;
+}
+
+.instagram{
+  width: 100%;
+}
+
+.button {
+ background-color: #1c5380;
+ position: float;
+}
+
+
+h1{
+  color: #06365f;
+}
+
+p{
+  font-size: 0.9em;
+  font-weight: normal;
+  color: rgb(59, 59, 59);
+}
+
+button {
+  float: right;
+  background-color: #1c5380;
+  border: none;
+  color: white;
+  padding: 6px 25px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 80%;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+footer {
+  background-color: white;
+  margin-top: 20px;
+  }
+
+.container {
+  position: relative;
+  background-color: white;
+  border-radius: 5px;
+  width: 120%;
+  margin-left: 50px;
+  padding: 20px 40px 0 40px;
+  box-shadow: 1px 1px 15px silver;
+  margin-top: 30%;
+
+}
+
+.copyright{
+  text-transform: uppercase;
+  color: grey;
+  font-size: 1em;
+  font-weight: bold;
+}
+
+ul {
+  background-color:white;
+  width: 60%;
+  margin: 0 auto;
+  list-style-type: none;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-size: 0.6em;
+  font-weight: bold;
+  overflow: hidden;
+  position: relative;
+}
+
+li {
+  float: left;
+  padding: 15px;
+  position: center;
+}
+
+main{
+  width: 300px;
+  padding: 25px;
+  margin: 0 auto;
+}
+
+.badges{
+  width:100%;
+  float: auto;
 }
