--- a/starter-code/css/main.css
+++ b/starter-code/css/main.css
@@ -6,5 +6,58 @@ light blue: #1c5380
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  margin: 0 auto;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
 }
+
+.descr article {
+  box-shadow: 10px 10px 8px #888888;
+}
+.container img {
+ float: left;
+ margin: 150px 50px;
+}
+.container h1{
+  color: #06365f;
+}
+
+.brand {
+  width: 300px;
+  
+
+}
+
+.descr {
+  float: right;
+  width: 500px;
+  height: 500px;
+  padding: 20px;
+  margin: 100px;
+  background: white;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: auto;
+}
+
+.badge {
+  float: left;
+  margin: 0 auto;
+  float: right;
+  width: 500px;
+  height: 100px;
+  padding: 50px;
+  display: cover;
+  margin: 50px;
+}
+
+footer ul {
+  display: flex;
+  justify-content: center;
+}
+ footer li {
+  margin: 15px;
+  list-style-type: none;
+  text-transform: uppercase;
+  font-size: 0.8em;
+ }
